Fix spacing between author and title in post list page

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -70,3 +70,7 @@ $base-font-family: "Poppins Medium", Poppins, Arial, sans-serif;
 .post-title {
 	line-height: $base-line-height * $base-font-size * 2.25;
 }
+
+.post-list h3 {
+    margin-bottom: 0px;
+}
